--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <!-- Video nền -->
     <video id="background-video" autoplay loop muted>
-        <source src="china.webm" type="video/mp4">
+        <source src="china.webm" type="">
         Trình duyệt của bạn không hỗ trợ video nền.
     </video>
 
