--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 }
 
 .container button {
-    animation: blink 1s infinite; /* Đặt hiệu ứng nhấp nháy */
+    animation: blink 2s infinite; /* Đặt hiệu ứng nhấp nháy */
 }
 
 .container button:active {
@@ -158,7 +158,7 @@
             }
         }
         .rectangle {
-    background-color: rgba(0, 0, 0, 0.5); /* Màu nền đen với độ trong suốt */
+    background-color: rgba(0, 0, 0, 0.7); /* Màu nền đen với độ trong suốt */
     padding: 70px;
     width: 1000px;
     height: 400px;
@@ -171,7 +171,7 @@
 
     <!-- Video nền -->
     <video id="background-video" autoplay loop muted>
-        <source src="china.webm" type="">
+        <source src="china.webm" type="video/mp4">
         Trình duyệt của bạn không hỗ trợ video nền.
     </video>
 
