--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             left: 0;
             width: 100%;
             background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px 20px;
+            padding: 12px 25px;
             z-index: 1000;
             display: flex;
             justify-content: space-between;
@@ -48,9 +48,11 @@
             list-style: none;
             display: flex;
             gap: 20px;
+            padding-left: 460px;
         }
         nav ul li {
             display: inline;
+           
         }
         nav ul li a {
             color: white;
@@ -59,6 +61,7 @@
             padding: 10px 15px;
             border-radius: 5px;
             transition: background-color 0.3s;
+            
         }
         nav ul li a:hover {
             background-color: #ff7f27;
