--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <!-- Thanh menu -->
     <nav>
-        <div class="logo">THE SOMS®</div>
+        <div class="logo">Trash2Trend®</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -194,7 +194,7 @@
     
      <div class="container">
         <div class="rectangle">
-             <h1>ＴＨＥ ＳＯＭＳ®</h1>
+             <h1>Trash2Trend®</h1>
         <p><b>ᴱˣᴾᴸᴼᴿᴵᴺᴳ ᵀᴴᴱ ᵂᴼᴿᴸᴰ ᴼᶠ ᶠᴬˢᵀ ᶠᴬˢᴴᴵᴼᴺ ᴬᴺᴰ ˢᵁˢᵀᴬᴵᴺᴬᴮᴵᴸᴵᵀᵞ</b></p>
         <button onclick="window.location.href='#about'">ᑕᒪIᑕᛕ ᖴᗝᖇ ᗰᗝᖇᗴ</button>
         </div>
