--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <nav>
         <div class="logo">Trash2Trend®</div>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="https://jasonphu16098.github.io/Trash2Trend/">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
