--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="rectangle">
              <h1>Trash2Trend®</h1>
         <p><b>ᴱˣᴾᴸᴼᴿᴵᴺᴳ ᵀᴴᴱ ᵂᴼᴿᴸᴰ ᴼᶠ ᶠᴬˢᵀ ᶠᴬˢᴴᴵᴼᴺ ᴬᴺᴰ ˢᵁˢᵀᴬᴵᴺᴬᴮᴵᴸᴵᵀᵞ</b></p>
-        <button onclick="window.location.href='#about'">ᑕᒪIᑕᛕ ᖴᗝᖇ ᗰᗝᖇᗴ</button>
+        <button onclick="window.location.href='https://jasonphu16098.github.io/abouttrash2trend/'">ᑕᒪIᑕᛕ ᖴᗝᖇ ᗰᗝᖇᗴ</button>
         </div>
     </div>
 
